--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ example/.idea/saveactions_settings.xml
 example/.idea/vcs.xml
 example/.idea/sonarlint/issuestore/index.pb
 example/target/
+data.csv
+data-*
