--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+spring.profiles.active=devel
+## datasource
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/sample?allowLoadLocalInfile=true}
+spring.datasource.username=${MYSQL_USER:sample}
+spring.datasource.password=${MYSQL_PASSWD:sample}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.type=org.springframework.jdbc.datasource.DriverManagerDataSource
+spring.sql.init.mode=NEVER
+# logback
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.test.context.transaction.TransactionContext=WARN
