--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
-example/.idea/compiler.xml
-example/.idea/encodings.xml
-example/.idea/jarRepositories.xml
-example/.idea/misc.xml
-example/.idea/runConfigurations.xml
-example/.idea/saveactions_settings.xml
-example/.idea/vcs.xml
-example/.idea/sonarlint/issuestore/index.pb
+example/.idea/*
 example/target/
 data.csv
 data-*
+example/.idea/inspectionProfiles/Project_Default.xml
